add footer mobile-first

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,8 +14,8 @@ body {
   padding: 0 15px;
   margin: 0 auto;
 }
-.main {
-  width: 100px;
+.main,
+.footer {
   background-color: #000;
 }
 button {
