--- a/css/main.css
+++ b/css/main.css
@@ -20,8 +20,8 @@ body {
   }
 }
 
-.main {
-  width: 100px;
+.main,
+.footer {
   background-color: #000;
 }
 
@@ -129,4 +129,17 @@ input:focus {
   font-weight: 400;
   font-size: 16px;
   color: #939393;
+}
+
+.footer {
+  padding: 27px 0;
+}
+.footer__text {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  text-align: center;
+  color: #939393;
+  max-width: 252px;
+  margin: 0 auto;
 }/*# sourceMappingURL=main.css.map */
