add render from api + pagination

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,10 +14,10 @@ body {
   padding: 0 15px;
   margin: 0 auto;
 }
-.main,
-.footer {
-  background-color: #000;
-}
+// .main,
+// .footer {
+//   // background-color: #000;
+// }
 button {
   cursor: pointer;
   border: none;
