--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
   padding: 27px 0;
 
+
   &__text {
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
@@ -9,5 +10,11 @@
     color: #939393;
     max-width: 252px;
     margin: 0 auto;
+
+    @media (min-width: 768px) {
+      font-size: 16px;
+      max-width: none;
+      padding: 18px 0;
+    }
   }
 }
