--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,6 +1,10 @@
 .header {
   padding: 78px 0;
 
+  @media (min-width: 768px) {
+    padding: 40px 0 163px;
+  }
+
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../images/header-bg-mobile.jpg");
   @media (min-device-pixel-ratio: 2),
@@ -43,6 +47,15 @@
     max-width: 212px;
     text-align: center;
     margin: 0 auto;
+
+    @media (min-width: 768px) {
+      font-size: 30px;
+      max-width: 353px;
+    }
+    @media (min-width: 1200px) {
+      font-size: 50px;
+      max-width: 600px;
+    }
   }
 }
 .logo {
@@ -56,9 +69,27 @@
 
   padding: 23px;
 
+  @media (min-width: 768px) {
+    padding: 30px;
+    width: 160px;
+    height: 160px;
+  }
+  @media (min-width: 1200px) {
+    padding: 40px;
+    width: 215px;
+    height: 210px;
+  }
   &__icon {
     width: 60px;
     height: 30px;
+    @media (min-width: 768px) {
+      width: 100px;
+      height: 50px;
+    }
+    @media (min-width: 1200px) {
+      width: 137px;
+      height: 67px;
+    }
   }
 }
 .header-search {
@@ -66,16 +97,42 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+
+  @media (min-width: 768px) {
+    flex-direction: row;
+    gap: 30px;
+  }
+  &-event-container,
+  &-choose-container {
+    margin-top: 25px;
+    position: relative;
+    @media (min-width: 768px) {
+      margin-top: 27px;
+    }
+    @media (min-width: 1200px) {
+      margin-top: 52px;
+    }
+  }
   &__input {
     backdrop-filter: blur(20px);
     background-color: rgba(255, 255, 255, 0.2);
     border-radius: 20px;
     padding: 10px 30px;
-    margin: 25px auto 0;
+    margin: 0 auto;
 
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 16px;
     color: #939393;
+  }
+
+  &__icon {
+    position: absolute;
+    top: 14px;
+    right: 30px;
+
+    width: 12px;
+    height: 12px;
+    fill: #939393;
   }
 }
